# net_handle

./: README.md  abc.py  app.py  requirements.txt
agents/: groq_llm_wrapper.py  shopping_agent.py
backend/: whatsapp_api_handler.py
experiments/: config.py  constants.py  main.py  test.py  test2.py
experiments/agents/: shopping_agent.py
experiments/crewai/: crew_api.py
experiments/crewai_fleet/nethandle/: README.md  pyproject.toml
experiments/crewai_fleet/nethandle/src/nethandle/: api_request.py  crew.py  crew_api.py  main.py  out.txt  out1  out4sneh  out5sneh  out_venkat  t1.txt  t2.txt  t3.txt  t4.txt  t5.txt  test.py  test_sneha.py  test_taneya.py
experiments/crewai_fleet/nethandle/src/nethandle/db/: chroma.sqlite3
experiments/crewai_fleet/nethandle/src/nethandle/db/a9398a27-8d8e-45ef-b931-6056ef77faec/: index_metadata.pickle
experiments/crewai_fleet/nethandle/src/nethandle/outputs/: ai_news_summary.txt
experiments/crewai_fleet/nethandle/src/nethandle/user_data/: health_monitoring_data.docx  lifestyle_advisor_data.docx  questions.txt
experiments/groq_integration/: llama_groq_client.py
experiments/multi_agent_experiments/: sample.txt  test_health_lifestyle_copy1.py
experiments/tools/: image_search_tool.py  serp_search_tool.py
frontend/: components.py  layout.py  package-lock.json  tailwind.config.js
frontend/public/: manifest.json
nethandle/: test_api.py
nethandle/src/: main.py
services/backend/: agent_manager.py
services/frontend/: package-lock.json  package.json  (+1 more)
tests/: test_agents.py  test_whatsapp_api_handler.py
(+40 files in other folders)
